--- a/typescript/setup-projects/tsconfig.json
+++ b/typescript/setup-projects/tsconfig.json
@@ -20,5 +20,8 @@
       "@models/*": ["./src/models/*"],
       "@config/*": ["./src/config/*"]
     }
-  }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
