--- a/typescript/ananke/package.json
+++ b/typescript/ananke/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "ts-node-dev --respawn --transpileOnly src/index.ts"
+    "dev:server": "ts-node-dev --respawn --transpileOnly --no-notify src/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
@@ -12,6 +12,12 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/bluebird": "^3.5.32",
+    "@types/node": "^14.0.14",
+    "@types/validator": "^13.1.0",
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.2.0",
+    "sequelize-typescript": "^1.1.0"
   }
 }
